--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -8,12 +8,12 @@ apply plugin: 'com.android.library'
 android {
 
     defaultConfig {
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 28
         buildConfigField "String", "BUILD_TIME", '"' + (new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ", Locale.ROOT).format(new Date())) + '"'
     }
 
-    compileSdkVersion 29
+    compileSdkVersion 28
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -21,4 +21,4 @@ android {
     }
 }
 
-apply from: '../build.dependencies.gradle'
+apply from: 'build.release.gradle'
