--- a/FtcRobotController/build.release.gradle
+++ b/FtcRobotController/build.release.gradle
@@ -1,4 +1,3 @@
-
 repositories {
     mavenCentral()
     google() // Needed for androidx
@@ -6,7 +5,7 @@ repositories {
     flatDir {
         dirs rootProject.file('libs')
     }
-    maven { url = 'https://maven.brott.dev' }
+    maven { url = 'https://maven.brott.dev/' }
     maven { url = 'https://maven.0x778.tk' }
 }
 
@@ -22,6 +21,5 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.1'
-    implementation 'com.spartronics4915.lib:ftc265:2.1.8'
-}
 
+}
