--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,9 +25,10 @@ dependencies {
     def room_version = "2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation 'com.spartronics4915.lib:ftc265:2.1.8'
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.1'
     implementation 'org.openftc:easyopencv:1.4.1'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.1'
 }
+
+apply from: 'build.release.gradle'
